sass/css: fix iframes not fitting on the page on mobile viewport size

--- a/sass/css/styles.scss
+++ b/sass/css/styles.scss
@@ -49,6 +49,9 @@ body > .footer {
 	}
 }
 
+body iframe {
+	width: 100%;
+}
 
 /********
  * Logo *
